<resources>
    <string name="app_name">The Nexus</string>

    <!-- Drawer -->
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="drawer_category_start">Start</string>
    <string name="drawer_category_personalization">Personalization</string>
    <string name="drawer_start">Start</string>
    <string name="drawer_updates">Updates</string>
    <string name="drawer_bugreport">Bugreport</string>
    <string name="drawer_battery">Battery</string>
    <string name="drawer_fingerprint">Fingerprint</string>
    <string name="drawer_power">Power</string>
    <string name="drawer_touchscreen">Touchscreen</string>
    <string name="drawer_properties">Properties</string>
    <string name="drawer_wakelocks">Wakelocks</string>

    <!-- Common -->
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_close">Close</string>
    <string name="common_cancel">Cancel</string>
    <string name="this_can_take_a_while_internet">
        This can take a while, depending on your current internet connection
    </string>
    <string name="power_profile_power_save">Power save</string>
    <string name="power_profile_efficiency">Efficiency</string>
    <string name="power_profile_balanced">Balanced</string>
    <string name="power_profile_quick">Quick</string>
    <string name="power_profile_performance">Performance</string>

    <!-- Tiles -->
    <string name="tile_quick_charge">Quick-Charge</string>
    <string name="tile_power_profile">Power-Profile</string>

    <!-- Fragment: Start -->
    <string name="fragment_start_device_name">%1$s %2$s</string>
    <string name="fragment_start_rom">ROM: %1$s</string>
    <string name="fragment_start_android_version">Version: %1$s (%2$s)</string>
    <string name="fragment_start_kernel">Kernel: %1$s</string>
    <string name="fragment_start_battery_precentage">%1$d%%</string>
    <string name="fragment_start_battery_status">Status: %1$s</string>
    <string name="fragment_start_battery_speed">%1$d mA</string>
    <string name="fragment_start_power_profile">Power-Profile</string>
    <string name="fragment_start_bugreport_title">Bugreport</string>
    <string name="fragment_start_bugreport_subtitle">Generates a bugreport which can be shared afterwards</string>
    <string name="fragment_start_set_profile_toast">Failed to set power-profile, please use the battery-settings</string>

    <!-- Fragment: Updates -->
    <string name="fragment_updates_searching_for_updates">Searching for updates...</string>
    <string name="fragment_updates_searching_for_updates_failed">Searching for updates failed</string>
    <string name="fragment_updates_info_no_infos">No informations...</string>
    <string name="fragment_updates_info_no_infos_subtitle">Please check for updates to get more informations...</string>
    <string name="fragment_updates_info_no_update">No update available...</string>
    <string name="fragment_updates_info_no_update_subtitle">You are already on the latest version</string>
    <string name="fragment_updates_info_new_update">New update available!</string>
    <string name="fragment_updates_info_new_update_subtitle">There\'s a new update available!</string>
    <string name="fragment_updates_testing_ota_channel">Search for testing-updates</string>
    <string name="fragment_updates_testing_ota_channel_descr">
        Search for updates in the unstable \"testing\"-channel. These builds can
        be very unstable, maybe destroy your device, cause thermonuclear war or harm cure kittens.
    </string>
    <string name="fragment_updates_check_for_updates">Check for updates</string>
    <string name="fragment_updates_download_and_install">Download &amp; Install</string>
    <string name="fragment_updates_download_and_install_title">Downloading update...</string>
    <string name="fragment_updates_download_and_install_failed">Downloading update failed</string>
    <string name="fragment_updates_ask_for_reboot">Reboot and install?</string>
    <string name="fragment_updates_ask_for_reboot_descr">
        Search for updates in the unstable \"testing\"-channel. These builds can
        be very unstable, maybe destroy your device, cause thermonuclear war or harm cure kittens.
    </string>
    <string name="fragment_updates_ask_for_reboot_yes">Reboot &amp; install</string>
    <string name="fragment_updates_ask_for_reboot_no">Cancel</string>
    <string name="fragment_updates_backup_system">Backup /system before installing</string>
    <string name="fragment_updates_backup_system_descr">
        Tell the recovery to create a backup of the
        system-partition before flashing the update.
    </string>
    <string name="fragment_updates_backup_data">Backup /data before installing</string>
    <string name="fragment_updates_backup_data_descr">
        Tell the recovery to create a backup of the
        data-partition before flashing the update.
    </string>
    <string name="fragment_updates_backup_boot">Backup /boot before installing</string>
    <string name="fragment_updates_backup_boot_descr">
        Tell the recovery to create a backup of the
        boot-partition before flashing the update.
    </string>
    <string name="fragment_updates_unsupported_rom">ROM is not supported</string>
    <string name="fragment_updates_unsupported_rom_descr">
        Your ROM does not support OTA-updates through TheNexus.
		Please download and flash the build manually.
    </string>

    <!-- Fragment: Battery -->
    <string name="fragment_battery_max_charging_limit">Maximum Charging-Speed Limit</string>
    <string name="fragment_battery_max_charging_limit_descr">
        Allows you to change the maximum charging-speed limit. The slider is limited to
        the recommended minimal and maximal values.
    </string>
    <string name="fragment_battery_max_charging_limit_text">%1$d mA</string>
    <string name="fragment_battery_no_critical_shutdown">Disable Critical Battery-Shutdown</string>
    <string name="fragment_battery_no_critical_shutdown_descr">
        Allows you to disable the automated shutdown on critical battery-levels. Use it
        with caution.
    </string>

    <!-- Fragment: Fingerprint -->
    <string name="fragment_fingerprint_always_on_fp">Enable always-on Fingerprint-Sensor</string>
    <string name="fragment_fingerprint_always_on_fp_descr">
        Enables fingerprint-wakelock so you can unlock the device with the fingerprint-sensor
        even when the screen is turned off.
    </string>
    <string name="fragment_fingerprint_allow_unlock_after_restart">Allow Fingerprint-unlock after restart</string>
    <string name="fragment_fingerprint_allow_unlock_after_restart_descr">
        Allows you to unlock the phone with the fingerprint-sensor after the device got rebooted.
        Use it on your own risk!
    </string>

    <!-- Fragment: Power -->
    <string name="fragment_power_profiles">Enable Profiles</string>
    <string name="fragment_power_profiles_descr">
        Allows the power-management to change various system-configurations when the
        power-profile is changed. Useful for normal usage, but should be deactivated if the
        user often customizes the system-settings.
    </string>
    <string name="fragment_power_boost_profiles">Enable Boost-Profiles</string>
    <string name="fragment_power_boost_profiles_descr">
        Allows the power-management to enable dynamic boost-profiles. These profiles will
        scale CPU- and GPU-frequencies accordingly to the system\'s wishes which can increase
        performance and battery-lifetime.
    </string>
    <string name="fragment_power_boost">Enable Boost</string>
    <string name="fragment_power_boost_descr">
        Allows the power-management to boost the system under some circumstances.
        It will result in a more smooth UI-experience, but also drain the battery faster.
    </string>

    <!-- Fragment: Touchscreen -->
    <string name="fragment_touchscreen_dt2w">Enable Double-Tap to Wake (DT2W)</string>
    <string name="fragment_touchscreen_dt2w_descr">
        Allows you to wake the device by tapping on the turned-off screen twice.
        Warning: Probably destroys deep-sleep and battery!
    </string>

    <!-- Fragment: Properties -->
    <string name="fragment_properties_toast_readonly">Sorry, but this property can\'t be edited as it is read-only</string>

    <!-- Fragment: Wakelocks -->
    <string name="fragment_wakelocks_nfc_ese">nfc_ese</string>
    <string name="fragment_wakelocks_nfc_sec">nfc_sec</string>
    <string name="fragment_wakelocks_sensorhub_gps">sensorhub_gps</string>
    <string name="fragment_wakelocks_sensorhub_grip">sensorhub_grip</string>
    <string name="fragment_wakelocks_sensorhub_ssp">sensorhub_ssp</string>
    <string name="fragment_wakelocks_sensorhub_ssp2">sensorhub_ssp2</string>

    <!-- Fragment: No Root -->
    <string name="fragment_no_root">No root-access</string>

    <!-- Menu: Properties -->
    <string name="menu_properties_add">Add new property</string>

    <!-- Dialog: Bugreport -->
    <string name="dialog_bugreport_title">Generating bugreport...</string>
    <string name="dialog_bugreport_content">This can take a while, please be patient...</string>
    <string name="dialog_bugreport_finished_title">Bugreport generated!</string>
    <string name="dialog_bugreport_finished_content">If you want to select it from a file-chooser, it\'s placed in %1$s</string>

    <!-- Dialog: Properties -->
    <string name="dialog_properties_save_button">Save</string>
    <string name="dialog_properties_remove_button">Remove</string>
    <string name="dialog_properties_cancel_button">Cancel</string>
    <string name="dialog_properties_ok_button">OK</string>
    <string name="dialog_properties_input_value">Value</string>
    <string name="dialog_properties_property_name">Property-Name</string>

</resources>
