<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="6dip"
    android:layout_marginEnd="6dip"
    android:layout_marginBottom="6dip"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dip"
            android:paddingStart="16dip"
            android:paddingEnd="16dip"
            android:id="@+id/fragment_updates_info_title"
            android:text="@string/fragment_updates_info_no_infos"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingStart="16dip"
            android:paddingEnd="16dip"
            android:id="@+id/fragment_updates_info_subtitle"
            android:text="@string/fragment_updates_info_no_infos_subtitle"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_updates_download_and_install"
                android:text="@string/fragment_updates_download_and_install"
                android:visibility="gone" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_updates_check_for_updates"
                android:text="@string/fragment_updates_check_for_updates" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>